--- a/group_test.css
+++ b/group_test.css
@@ -1,5 +1,8 @@
 body {
 	/*margin: 0;*/
+	background-image: url(group_test/techteaching.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background-color: #FDAB74;
 }
 
@@ -43,17 +46,17 @@ nav ul li {
 }
 
 div.about {
-	width: 500px;
-	height: 615px;
+	width: 775px;
+	height: 270px;
 	border-radius: 25px;
-	margin: 30px auto 0 auto;
-	padding: 1em;
-	background:rgba(255,255,255, 0.6);
+	margin: 80px 0 auto 300px;
+	background:rgba(230,230,230, 0.5);
 }
 
 .about h4 {
 	text-align: center;
 	font-family: "PT Sans Narrow", sans-serif;
+	text-shadow: 1px 1px 1px #FFFFFF;
 	font-size: 2.2em;
 }
 
@@ -61,22 +64,69 @@ div.about {
 	font-family: "PT Sans Narrow", sans-serif;
 	letter-spacing: .65px;
 	text-indent: 25px;
+	padding: 0px 25px 0 25px;
+	font-weight: bold;
 }
 
 div.mission {
-	display: inline-block;
-	float: left;
 	font-family: "PT Sans Narrow", sans-serif;
+	color: #CCFFFF;
+	text-shadow: 6px 6px 12px black, 0 0 25px #00003D, 0 0 5px #333333;
 	text-align: center;
 	font-size: 3em; 
 	width: 500px;
-	margin-left: 420px;
+	margin: 80px 0 180px 420px;
+	padding-top: 80px;
 }
+
+ul#code {
+	width: 660px;
+	height: 560px;
+	list-style-type: none;
+	margin: 75px 0 75px 340px;
+	padding: 10px;
+	border-radius: 10px;
+	background-color: rgba(230,230,230, 0.6);
+}
+
+div.content {
+	display: inline-block;
+	height: 112px;
+	width: 300px;
+	/*background: rgba(230,230,230, 0.5);*/
+	/*box-shadow: 2px 2px 1px #000000;*/
+	font-family: "PT Sans Narrow", sans-serif;
+	color: #000000;
+	font-weight: bold;
+	font-size: 16pt;
+	padding-top: 2px;
+	margin-left: 370px;
+}
+
+.desc:link, .desc:hover, .desc:active, .desc:visited {
+	color: black;
+	text-decoration: none;
+}
+
+#code li {
+	margin-bottom: 20px;
+	width: 110px;
+}
+
+#code li .image {
+	display: block;
+	height: 112px;
+	margin-bottom: 25px;
+}
+
+#code li .image, #code li .image, #code i .image {
+	width: 24px; 
+	height: 30px;
+} 
 
 #newbutton {
 	display: inline-block;
 	margin: 5px 0 35px 535px;
-	
 }
 
 .mybutton {
@@ -95,6 +145,7 @@ div.mission {
 	text-decoration:none;
 	text-shadow: 1px 1px 1px #000000;
 }
+
 .mybutton:hover {
 	background-color:#35898E;
 }
