--- a/group_test.css
+++ b/group_test.css
@@ -1,6 +1,6 @@
 body {
 	/*margin: 0;*/
-	background-image: url(group_test/techteaching.jpg);
+	background-image: url(techteaching.jpg);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-color: #FDAB74;
